--- a/Image Recognisation Project(ML)/ReadMe
+++ b/Image Recognisation Project(ML)/ReadMe
@@ -1,3 +1,4 @@
 This project uses machine learning to recognize different numbers from the pictures given, irrespective of font or style.
 It utilizes the concept of neural networks to work.
 This was an assignment I completed from the Andrew NG Machine Learning course, Stanford University at Coursera.
+The PDF given should help you realise better what I am doing in the codes
